[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asgiproxy"
dynamic = ["version"]
description = "Tools for building HTTP and Websocket proxies for the asynchronous ASGI protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Valohai", email = "dev@valohai.com" },
]
dependencies = [
    "aiohttp",
    "starlette",
    "websockets",
]

[project.urls]
Homepage = "https://github.com/valohai/asgiproxy"

[tool.hatch.version]
path = "asgiproxy/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/asgiproxy",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    "B",
    "C901",
    "E",
    "F",
    "I",
    "RUF100",
    "S",
    "W",
]
ignore = [
    "S110",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN201",
    "S101",
]

[tool.mypy]

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true
