[metadata]
name = asgiproxy
version = attr: asgiproxy.__version__
author = Valohai
author_email = dev@valohai.com
maintainer = Aarni Koskela
maintainer_email = akx@iki.fi
description = Tools for building HTTP and Websocket proxies for the asynchronous ASGI protocol
url = https://github.com/valohai/asgiproxy

[options]
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp
    starlette
    websockets
include_package_data = true

[options.packages.find]
where = .
exclude = tests

[bdist_wheel]
python-tag = py3

[flake8]
max-line-length = 99
exclude =
    ./setup.py
ignore =
    ANN101
    SIM105
    SIM119
per-file-ignores =
    *test*: ANN001, ANN201

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = true
